--- a/python-app/templates/user.html
+++ b/python-app/templates/user.html
@@ -15,13 +15,13 @@
 
     <form>
         <label for="message">New message:</label>
-        <input name="message" required>
-        <a href=# id=send><button>Send</button></a>
+        <input name="message" placeholder="Your message" required>
+        <button href=# id=send>Send</button>
     </form>
 
     <form>
         <label for="last_message">Last message:</label>
-        <output name="last_message">"<span id=last_message>No messages sent before</span>"</output>
+        <output name="last_message">"<span id=last_message>No messages</span>"</output>
     </form>
 
     <form>
@@ -32,7 +32,7 @@
     <script type=text/javascript>
         var num_messages = 0
         $(function() {
-            $('a#send').on('click', function(event) {
+            $('button#send').on('click', function(event) {
                 event.preventDefault()
                 $.getJSON('/message', {
                     message: $('input[name="message"]').val()
