Add mouse events

--- a/python-app/templates/user.html
+++ b/python-app/templates/user.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <a href="/"><h1>Demonstrator</h1></a>
+    <a href="/">
+        <h1>Demonstrator</h1>
+    </a>
 
     <h2>Hello {{ user }} </h2>
 
@@ -41,7 +43,7 @@
                     $("#num_messages").text(num_messages);
                 });
                 num_messages++;
-                return false; 
+                return false;
             });
         });
     </script>
