Add position tracking

--- a/python-app/templates/user.html
+++ b/python-app/templates/user.html
@@ -33,7 +33,7 @@
 
     <script type=text/javascript>
         var num_messages = 0
-        $(function() {
+        $(document).on('ready', function() {
             $('button#send').on('click', function(event) {
                 event.preventDefault()
                 $.getJSON('/message', {
@@ -45,6 +45,12 @@
                 num_messages++;
                 return false;
             });
+
+          $(document).on('mousemove', function (e) {
+            $.ajax({url: '/mouse-events', type:'POST', dataType: 'json',
+                contentType: 'application/json', data: JSON.stringify({"x": e.clientX, "y": e.clientY})
+            }).done(function( msg ) {console.log( "Data Saved: " + msg );});
+          });
         });
     </script>
 
