--- a/apache/app/templates/index.html
+++ b/apache/app/templates/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demonstrator</title>
 </head>
+
 <body>
     <a href="/">
         <h1>Demonstrator</h1>
     </a>
+    <h2>BROKER: {{ broker_url }} </h2>
+    <h2>SCHEMA-REGISTRY: {{ schema_url }} </h2>
     <form action="/login" method="POST">
         <label for="name">Name:</label>
         <input name="name" required>
         <input type="submit" value="Login">
     </form>
 </body>
+
 </html>
