--- a/apache/app/templates/index.html
+++ b/apache/app/templates/index.html
@@ -11,7 +11,7 @@
     <a href="/">
         <h1>Demonstrator</h1>
     </a>
-    <h2>BROKER: {{ broker_url }} </h2>
+    <h2>BROKER: {{ broker_urls }} </h2>
     <h2>SCHEMA-REGISTRY: {{ schema_url }} </h2>
     <form action="/login" method="POST">
         <label style="display: inline-block;width: 100px;" for="name">Name:</label>
